Feature: spliting friends functions and adding socket for real time handler